syntax = "proto3";
package gprc_golang;

service Greeter {

    rpc SayList (HelloRequest) returns (stream HelloReply){}
}

message HelloRequest{
    repeated string name = 1;
}

message HelloReply{
    string message =1;
}